--- a/UPR Controller Mac/UPR Controller Mac/Info.plist
+++ b/UPR Controller Mac/UPR Controller Mac/Info.plist
@@ -17,11 +17,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.1</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>1.1</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSHumanReadableCopyright</key>
@@ -31,6 +31,6 @@
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 	<key>SUFeedURL</key>
-	<string>http://universalpresenterremote.azurewebsites.net/Resources/Downloads/appcast.xml</string>
+	<string>http://universalpresenterremote.com/Resources/Downloads/appcast.xml</string>
 </dict>
 </plist>
